--- a/package.json
+++ b/package.json
@@ -26,11 +26,11 @@
     "easy-autocomplete": "^1.3.5",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-terser": "^2.0.0",
-    "ila-ui-elements": "gitlab:irish-left-archive/ila-ui-elements#semver:0.5.0",
+    "ila-ui-elements": "Aonrud/ila-ui-elements#semver:0.5.0",
     "js-cookie": "^3.0.1",
     "list.js": "^2.3.1",
     "mediaelement": "^4.2.16",
-    "timeline": "gitlab:irish-left-archive/timeline#semver:1.1.2",
+    "timeline": "Aonrud/ila-timeline#semver:1.1.2",
     "tippy.js": "^6.3.1"
   }
 }
