--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.2.1",
     "@panzoom/panzoom": "^4.5.1",
+    "@popperjs/core": "2",
     "bootstrap": "^3.4.1",
     "bootstrap-slider": "^10.6.2",
     "datatables.net": "^1.13.1",
