--- a/.gitmodules
+++ b/.gitmodules
@@ -51,7 +51,7 @@
 	url = https://github.com/symphonycms/jit_image_manipulation.git
 [submodule "site/extensions/link_preview"]
 	path = site/extensions/link_preview
-	url = https://github.com/DeuxHuitHuit/link_preview.git
+	url = https://github.com/Aonrud/link_preview.git
 [submodule "site/extensions/maintenance_mode"]
 	path = site/extensions/maintenance_mode
 	url = https://github.com/symphonycms/maintenance_mode.git
