--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     volumes:
       - ./workspace:/var/www/html/workspace
     ports:
-      - "8081:80"
+      - 127.0.0.1:${PORT}:80
   db:
     image: mariadb:10.11
     container_name: "leftarchive-db"
