Revert "feat: redirect nodeinfo to posts subdomain"
This reverts commit 464f1d6cb5b8adb7c621b165a470d5338b936468.

Doesn't make sense in light of multiple ActivityPub subdomains – better to let these provide their own nodeinfo.

--- a/site/.htaccess
+++ b/site/.htaccess
@@ -1,6 +1,5 @@
-### Webfinger and nodeinfo
+### Redirect webfinger
 RewriteRule ^.well-known/webfinger.*$ https://posts.leftarchive.ie/.well-known/webfinger$1 [L,R=301]
-RewriteRule ^.well-known/nodeinfo$ https://posts.leftarchive.ie/.well-known/nodeinfo [L,R=301]
 
 ### Podcast transition
 RewriteRule ^podcast/feed/$ https://podcast.leftarchive.ie/@ILAPodcast/feed.xml [L,R=301]
