--- a/package.json
+++ b/package.json
@@ -17,21 +17,21 @@
     "jit-grunt": "^0.10.0"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^6.3.0",
+    "@fortawesome/fontawesome-free": "^6.4.2",
     "@panzoom/panzoom": "^4.5.1",
-    "@popperjs/core": "2",
+    "@popperjs/core": "^2.11.8",
     "bootstrap": "^3.4.1",
     "bootstrap-slider": "^10.6.2",
-    "datatables.net": "^1.13.3",
-    "datatables.net-bs": "^1.13.3",
+    "datatables.net": "^1.13.6",
+    "datatables.net-bs": "^1.13.6",
     "easy-autocomplete": "^1.3.5",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-terser": "^2.0.0",
-    "ila-ui-elements": "github:Aonrud/ila-ui-elements#semver:0.8.2",
-    "jquery": "^3.6.3",
-    "js-cookie": "^3.0.1",
+    "ila-ui-elements": "github:Aonrud/ila-ui-elements#semver:0.9.0",
+    "jquery": "^3.7.0",
+    "js-cookie": "^3.0.5",
     "list.js": "^2.3.1",
-    "timeline": "github:Aonrud/ila-timeline#semver:1.3.0",
+    "timeline": "github:Aonrud/ila-timeline#semver:2.1.2",
     "tippy.js": "^6.3.7"
   }
 }
